Fixing on mobile

--- a/src/components/Question/styles.scss
+++ b/src/components/Question/styles.scss
@@ -9,6 +9,8 @@
     font-family: ABCSerif, serif;
     font-size: 18px;
     color: black;
+    text-transform: unset;
+    line-height: normal;
   }
 
   p {
